# puzzleblocks

./: .gitignore  CMakeLists.txt  CREDITS  README.md  README.txt  cppcheck-suppressions.txt  sciteprojrc.lua  valgrind.supp
cmake/: FindAllegro5.cmake  FindGusGame.cmake  FindGusGui.cmake
data/: blocks.xcf  gem1.xcf
src/: Ball.cpp  Ball.h  Block.cpp  Block.h  Data.cpp  Data.h  Entry.cpp  Events.cpp  Events.h  GameEventHandler.cpp  GameEventHandler.h  GameMode.cpp  GameMode.h  GameModeHandler.cpp  GameModeHandler.h  GameModeMainMenu.cpp  GameModeMainMenu.h  Main.cpp  MainMenuEventHandler.cpp  MainMenuEventHandler.h  Map.cpp  Map.h  Program.cpp  Program.h
src/EventHandler/: EventHandlerGame.cpp  EventHandlerGame.h  EventHandlerMainMenu.cpp  EventHandlerMainMenu.h
src/GameMode/: GameMode.cpp  GameMode.h  GameModeGame.cpp  GameModeGame.h  GameModeHandler.cpp  GameModeHandler.h  GameModeMainMenu.cpp  GameModeMainMenu.h
src/Gui/: Button.cpp  Button.h  MainMenuPanel.cpp  MainMenuPanel.h
